--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,11 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sass": "^1.29.0",
     "web-vitals": "^0.2.4"
-  },  
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bibschan/walmart-hackathon.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bibschan/walmart-hackathon/issues"
-  },
-  "homepage": "https://github.com/bibschan/walmart-hackathon#readme",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
